<!--suppress CheckTagEmptyBody -->

<!--TODO: Use string arrays where appropriate-->

<resources>
    <string name="app_name">Geobotanica</string>
    <string name="gps_must_be_enabled">GPS must be enabled</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="got_it">Got it!</string>
    <string name="delete">Delete</string>
    <string name="skip">Skip</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_measurement">Add Measurements</string>
    <string name="photo_type">Photo Type</string>
    <string name="add_measurements">Add Measurements</string>
    <string name="plant_location">Plant Location</string>
    <string name="hold">Hold</string>
    <string name="common_name">Common Name</string>
    <string name="common_names">Common names</string>
    <string name="scientific_name">Scientific name</string>
    <string name="scientific_names">Scientific names</string>
    <string name="hint_common_name">e.g. Hardy kiwi</string>
    <string name="hint_scientific_name">e.g. Actinidia arguta</string>
    <string name="height">Height</string>
    <string name="diameter">Diameter</string>
    <string name="trunk_diameter">Trunk diameter</string>
    <string name="plant_type">Plant Type</string>
    <string name="change_plant_type">Change Plant Type</string>
    <string name="select_photo_type">Select Photo Type</string>
    <string name="select_new_photo_type">Select New Photo Type</string>
    <string name="change_photo_type">Change Photo Type</string>
    <string name="select_photo_action">Select Photo Action</string>
    <string name="edit_plant_name">Edit Plant Name</string>
    <string name="provide_plant_measurements">Provide plant measurements</string>
    <string name="edit_plant_measurements">Edit Plant Measurements</string>
    <string name="add_plant_measurements">Add Plant Measurements</string>
    <string name="starred">Starred</string>
    <string name="history">History</string>
    <string name="suggested_common">Suggested common names:</string>
    <string name="suggested_scientific">Suggested scientific names:</string>
    <string name="no_results">No Results</string>
    <string name="assisted">Assisted</string>
    <string name="manual">Manual</string>
    <!--https://docs.oracle.com/javase/1.5.0/docs/api/java/util/Formatter.html-->
    <string name="precision">± %1$.1f m</string>
    <string name="satelliteCount">%1$d/%2$d</string>
    <string name="plant_measurements">Plant Measurements</string>
    <string name="height_measurement">Height: %1$s</string>
    <string name="diameter_measurement">Diameter: %1$s</string>
    <string name="trunk_diameter_measurement">Trunk diameter: %1$s</string>
    <string name="location">Location precision: ± %1$.1f</string>
    <string name="satellites">(%1$d/%2$d satellites)</string>
    <string name="last_measured_by">Last measured by %1$s</string>
    <string name="created_by">Created by %1$s on %2$s</string>
    <string name="modified_by">Modified by %1$s on %2$s</string>
    <string name="button_gps">Hold position</string>
    <string name="inches">in</string>
    <string name="delete_plant">Delete Plant?</string>
    <string name="delete_photo">Delete Photo?</string>
    <string name="retake_photo">Retake Photo?</string>
    <string name="internet_unavailable">Internet unavailable</string>
    <string name="metered_network">Use Metered Network?</string>
    <string name="discard_new_plant">Discard New Plant?</string>
    <string name="delete_plant_confirm">Are you sure you want to delete this plant and its photos?</string>
    <string name="delete_photo_confirm">Are you sure you want to delete this photo?</string>
    <string name="retake_photo_confirm">The current photo will be deleted. Are you sure you want to retake this photo?</string>
    <string name="discard_new_plant_confirm">Are you sure you want to exit and discard all data and photos of this new plant?</string>
    <string name="metered_network_confirm">Are you sure you want to download over a metered network?</string>
    <string name="plant_deleted">Plant deleted</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="photo_updated">Photo updated</string>
    <string name="plant_discarded">Plant discarded</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable">Enable</string>
    <string name="never_ask_again">Never ask again</string>
    <string name="allow_forever">Allow forever</string>
    <string name="name_search_hint">Common or scientific name</string>
    <string name="include">Include</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="geobotanica">Geobotanica</string>
    <string name="plant_details">Plant Details</string>
    <string name="plant_photo">Plant Photo</string>
    <string name="search_plant_name">Search Plant Name</string>
    <string name="plant_name">Plant Name</string>
    <string name="confirm_new_plant">Confirm New Plant</string>
    <string name="download_plant_database">Download Plant Database</string>
    <string name="host_unreachable">Host unreachable</string>
    <string name="unknown_host">Unknown host</string>
    <string name="connection_lost">Connection lost</string>
    <string name="connection_timed_out">Connection timed out</string>
    <string name="internal_storage">Internal storage available: %1$d MB</string>
    <string name="not_enough_internal_storage" >Not enough free internal storage</string>
    <string name="not_enough_external_storage">Not enough free external storage</string>
    <string name="Inspect">Inspect</string>
    <string name="download_file_name">%s (%d MB)</string>
    <string name="plant_name_database">Plant name database</string>
    <string name="database_import_failed">Database import failed</string>
    <string name="download_maps">Download Maps</string>
    <string name="download">Download</string>
    <string name="downloads">Downloads</string>
    <string name="world_map">World map (3 MB)</string>
    <string name="plant_name_db">Plant name database (27 MB)</string>
    <string name="download_assets">Download Assets</string>
    <string name="start_downloads">Start downloads</string>
    <string name="error_downloading">Error downloading %s</string>
    <string name="error_importing_plant_db">Error importing plant name database</string>
    <string name="searching_online_maps">Searching online maps...</string>
    <string name="find_local_maps">Find local maps</string>
    <string name="browse_maps">Browse maps</string>
    <string name="suggested_maps">Suggested maps:</string>
    <string name="show_suggested">Show suggested</string>
    <string name="exit_app">Exit App?</string>
    <string name="exit_app_confirm">Are you sure you want to exit?</string>
    <string name="delete_map">Delete Map?</string>
    <string name="confirm_delete_map">Are you sure you want to delete the %1$s map?</string>
    <string name="geolocation_error">Geolocation error</string>
    <string name="download_local_maps">Download Local Maps</string>
    <string name="wait_for_plant_name_database_to_download">Wait for plant name database to download</string>
    <string name="you_are_here">You are here</string>
    <string name="taken_by">Taken by %1$s on %2$s</string>
    <string name="nickname">Nickname</string>
    <string name="userExists">User \'%s\' already exists</string>
    <string name="select_user">Select User</string>
    <string name="app_permissions">App Permissions</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="writeExternalStorage">Write external storage</string>
    <string name="accessFineLocation">Access fine location</string>
    <string name="permissions_required">Permissions are required.</string>
</resources>
