<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.geobotanica.geobotanica.ui.downloadmaps.LocalMapsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/searchingOnlineMapsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_marginStart="@dimen/small_gap"
            android:textSize="@dimen/large_text"
            android:text="@string/searching_online_maps"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/noResultsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_marginStart="@dimen/small_gap"
            android:textSize="@dimen/large_text"
            android:text="@string/no_results"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_gap"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/getMapsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_gap"
            android:padding="@dimen/small_gap"
            android:text="@string/find_local_maps"
            android:textColor="@color/colorWhite"
            android:drawablePadding="@dimen/tiny_gap"
            android:drawableEnd="@drawable/ic_file_download_24dp_white"
            android:backgroundTint="@color/colorPrimaryDark"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/browseMapsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tiny_gap"
            android:layout_marginStart="@dimen/tiny_gap"
            android:padding="@dimen/small_gap"
            android:text="@string/browse_maps"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <TextView
            android:id="@+id/storageAvailableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text"
            app:layout_constraintTop_toTopOf="@id/browseMapsButton"
            app:layout_constraintBottom_toBottomOf="@id/browseMapsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:visibility="@{ safeUnbox(viewModel.showFab) ? View.VISIBLE : View.GONE }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/colorWhite"
            app:srcCompat="@drawable/ic_navigate_next_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>