<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.new_plant_name.NewPlantNameActivity">

    <com.geobotanica.geobotanica.ui.GpsCompoundView
        android:id="@+id/gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!--TODO: Make button view: show large image when clicked-->
    <ImageView
        android:id="@+id/plantPhoto"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/plant_type_tree"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/commonNameEditText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantPhoto">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/common_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/latinNameEditText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commonNameEditText">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/latin_name" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/addMeasurementsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_measurements"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latinNameEditText" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/measurementsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/addMeasurementsText"
        app:layout_constraintEnd_toEndOf="parent" />


    <RadioGroup
        android:id="@+id/measurementRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMeasurementsText">

        <RadioButton
            android:id="@+id/assistedRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:checked="true"
            android:text="@string/assisted" />

        <RadioButton
            android:id="@+id/manualRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/manual" />
    </RadioGroup>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toTopOf="@+id/gps"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_cab_done_mtrl_alpha" />

</android.support.constraint.ConstraintLayout>

    <!--<android.support.constraint.Guideline-->
    <!--android:id="@+id/photoGuideline"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--app:layout_constraintHeight_percent="40"-->
    <!--/>-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintGuide_begin="309dp"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->