<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLayout">

        <TextView
            android:id="@+id/addMeasurementsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_measurements"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/measurementsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:checked="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioGroup
            android:id="@+id/measurementRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addMeasurementsText">

            <RadioButton
                android:id="@+id/assistedRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assisted" />

            <RadioButton
                android:id="@+id/manualRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/manual" />
        </RadioGroup>

        <com.geobotanica.geobotanica.ui.compoundview.MeasurementEditView
            android:id="@+id/heightMeasurementView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/measurementRadioGroup"
            app:layout_constraintStart_toStartOf="parent" />

        <com.geobotanica.geobotanica.ui.compoundview.MeasurementEditView
            android:id="@+id/diameterMeasurementView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/heightMeasurementView"
            app:layout_constraintStart_toStartOf="parent" />

        <com.geobotanica.geobotanica.ui.compoundview.MeasurementEditView
            android:id="@+id/trunkDiameterMeasurementView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/diameterMeasurementView"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.geobotanica.geobotanica.ui.compoundview.GpsCompoundView
        android:id="@+id/gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|end"
        app:tint="@color/colorWhite"
        app:srcCompat="@drawable/ic_done_black_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>