<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/splash"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/splash"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/writeExternalStorageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:text="@string/writeExternalStorage"
            app:layout_constraintTop_toBottomOf="@id/splash"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/writeExternalStorageCheckMark"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_done_black_24dp"
            android:tint="@color/colorPrimaryDark"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/writeExternalStorageText"
            app:layout_constraintStart_toEndOf="@id/writeExternalStorageText"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/AccessFineLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/accessFineLocation"
            app:layout_constraintTop_toBottomOf="@id/writeExternalStorageText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/accessFineLocationCheckMark"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_done_black_24dp"
            android:tint="@color/colorPrimaryDark"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/AccessFineLocationText"
            app:layout_constraintStart_toEndOf="@id/AccessFineLocationText"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/permissionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:padding="16dp"
            android:text="@string/grant_permissions"
            android:textColor="@color/colorWhite"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_done_white_24dp"
            android:foregroundTint="@color/colorWhite"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|end"
        android:visibility="gone"
        app:tint="@color/colorWhite"
        app:srcCompat="@drawable/ic_done_black_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>